# passguard

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: electron.yml  publish.yml  rust.yml
api/: Cargo.toml
api/src/: database.rs  encrypt.rs  error.rs  lib.rs  model.rs
app/: .gitignore  babel.config.json  lib.js  main.js  package.json  webpack.config.js  webpack.main.config.js
app/src/: eventListener.js  index.css  index.html  index.js  lib.js  main.js  renderer.js
app/src/components/: MainContext.js  PasswordRow.js  PasswordTable.js  Profile.js  WelcomeForm.js
lib/: Cargo.toml
lib/src/: api.rs  database.rs  encrypt.rs  error.rs  lib.rs  model.rs
passguard/: Lib.cs  MainWindow.Designer.cs  MainWindow.cs  Program.cs
src/: api.rs  database.rs  encrypt.rs  error.rs  main.rs  model.rs
ui/: .gitignore  Cargo.toml  package.json  passguard.db  webpack.main.config.js  webpack.renderer.config.js
ui/src/: App.vue  context.rs  index.html  lib.js  main.js  main.rs  renderer.js
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src/components/: PasswordRow.js  PasswordRow.vue  PasswordTable.js  PasswordTable.vue  Signin.vue  WelcomeForm.js
ui/src/views/: Home.vue
