[package]
name = "passguard"
version = "0.1.0"
authors = ["dm67x <dm67x@outlook.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simple_logger = "1.11.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
r2d2_sqlite = "0.17.0"
r2d2 = "0.8.9"
lazy_static = "1.4.0"

[dependencies.rusqlite]
version = "0.24.2"
features = ["bundled"]