[package]
name = "passguard"
version = "0.1.0"
authors = ["dm67x <dm67x@outlook.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy"]

[lib]
crate-type = ["dylib"]

[dependencies]
log = "0.4"
simple_logger = "1.11.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
r2d2_sqlite = "0.17.0"
r2d2 = "0.8.9"
lazy_static = "1.4.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
magic-crypt = "3.1.6"
sha2 = "0.9.3"
hex = "0.4.2"
tokio = { version = "1", features = ["full"] }

[dependencies.rusqlite]
version = "0.24.2"
features = ["bundled"]