[package]
name = "passguard-ui"
version = "0.1.0"
description = "A Tauri App"
authors = [ "dm67x" ]
license = ""
repository = ""
default-run = "passguard-ui"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.11", features = [ "all-api" ] }
passguard = { path = "../../lib" }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "passguard-ui"
path = "src/main.rs"
